Add a joinActivity that starts a game

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="play">Play</string>
     <string name="enter_code">Enter code</string>
     <string name="join">Join</string>
+    <string name="enter_username">Enter username</string>
 
 </resources>
