add a new shake activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="join">Join</string>
     <string name="enter_username">Enter username</string>
     <string name="tapGameMessage">Tap here!</string>
+    <string name="shakeGameMessage">Shake!</string>
 
 </resources>
