Fix crashing bug die to event changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="shakeGameTitle">Shake</string>
     <string name="shakeGameMessage">Shake your phone!</string>
 
+    <string name="waitingRoomMessage">Waiting room</string>
+
 </resources>
