open keyboard on start, new string for visit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="enter_code">Enter code</string>
     <string name="join">Join</string>
     <string name="enter_username">Enter username</string>
+    <string name="visit_message">Visit go/cloud-cup on a big screen.</string>
 
     <string name="tapGameTitle">Tap</string>
     <string name="tapGameMessage">Tap here!</string>
