--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,10 @@
     <string name="shakeGameTitle">Shake</string>
     <string name="shakeGameMessage">Shake your phone!</string>
 
-    <string name="waitingRoomMessage">Waiting room</string>
+    <string name="firstRoomTitle">Waiting room</string>
+
+    <string name="waitingTitle">Get ready...</string>
+
+    waitingTitle
 
 </resources>
