--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,9 @@
     <string name="shakeGameTitle">Shake</string>
     <string name="shakeGameMessage">Shake your phone!</string>
 
+    <string name="mathGameMessage">Result</string>
+    <string name="mathValidate">Send</string>
+
     <string name="firstRoomTitle">Waiting room</string>
 
     <string name="waitingTitle">Get ready...</string>
