Add swipe activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="firstRoomTitle">Waiting room</string>
 
     <string name="waitingTitle">Get ready...</string>
+    <string name="swipeGameTitle">Swipe up!</string>
 
     waitingTitle
 
