forgot to push strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,8 @@
 
     <string name="joiningMessage">Press play when everyone is ready</string>
 
+    <string name="gameOverTitle">Game Over</string>
+
     waitingTitle
 
 </resources>
